Add Google Search Console verification to index.html
Added Google Search Console verification meta tag.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://nniv-cmyk.github.io/" />
 
+  <!-- Google Search Console verification -->
+  <meta name="google-site-verification" content="ioTGvJdIEAE9ZvoRpmB7s5CdGAye84w6Tw-0pOTp-ZE" />
+
   <!-- Structured data to help Google connect queries like 'vincent rotich google scholar' -->
   <script type="application/ld+json">
   {
