Add Google Scholar link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <p class="affil">Kyoto University · Biosensing Engineering</p>
 
   <p>👉 <a href="https://scholar.google.com/citations?user=nMBiqwMAAAAJ&hl=en"><strong>Google Scholar</strong></a></p>
+  <p><a href="https://nniv-cmyk.github.io/google-scholar.html">Vincent Rotich Google Scholar</a></p>
 
   <div class="links">
     <a href="https://www.researchgate.net/profile/Vincent-Rotich">ResearchGate</a><br/>
