Update schema and links in index.html

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Vincent Rotich",
+    "alternateName": ["Vincent K. Rotich", "Vincent Kipkirui Rotich", "Rotich Vincent Kipkirui"],
     "givenName": "Vincent",
     "familyName": "Rotich",
     "jobTitle": "PhD (Biosensing Engineering)",
     "affiliation": { "@type": "Organization", "name": "Kyoto University" },
     "url": "https://nniv-cmyk.github.io/",
     "sameAs": [
-    "https://scholar.google.com/citations?user=nMBiqwMAAAAJ&hl=en",
-    "https://www.researchgate.net/profile/Vincent-Rotich",
-    "https://orcid.org/0009-0008-2379-0347"
-  ]
-
+      "https://scholar.google.com/citations?user=nMBiqwMAAAAJ&hl=en",
+      "https://www.researchgate.net/profile/Vincent-Rotich",
+      "https://orcid.org/0009-0008-2379-0347"
+    ]
   }
   </script>
 
@@ -47,8 +47,7 @@
 
   <div class="links">
     <a href="https://www.researchgate.net/profile/Vincent-Rotich">ResearchGate</a><br/>
-    <!-- Add your ORCID link below if you have it -->
-    <!-- <a href="https://orcid.org/0000-0000-0000-0000">ORCID</a> -->
+    <a href="https://orcid.org/0009-0008-2379-0347">ORCID</a>
   </div>
 
   <p>Official landing page linking to my publications and citation profiles.</p>
