Update title and description for Google Scholar page

--- a/google-scholar.html
+++ b/google-scholar.html
@@ -3,31 +3,37 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vincent Rotich — Google Scholar Profile</title>
-  <meta name="description" content="Official page pointing to the Google Scholar profile of Vincent Rotich." />
+  <title>Vincent Rotich Google Scholar</title>
+  <meta name="description" content="Official page linking to the Google Scholar profile of Vincent Rotich." />
   <link rel="canonical" href="https://nniv-cmyk.github.io/google-scholar.html" />
   <meta name="robots" content="index, follow" />
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
     "@id": "https://nniv-cmyk.github.io/#vincent-rotich",
     "name": "Vincent Rotich",
+    "alternateName": ["Vincent K. Rotich", "Vincent Kipkirui Rotich", "Rotich Vincent Kipkirui"],
     "url": "https://nniv-cmyk.github.io/google-scholar.html",
     "sameAs": [
       "https://scholar.google.com/citations?user=nMBiqwMAAAAJ&hl=en",
-      "https://nniv-cmyk.github.io/"
+      "https://nniv-cmyk.github.io/",
+      "https://orcid.org/0009-0008-2379-0347",
+      "https://www.researchgate.net/profile/Vincent-Rotich"
     ]
   }
   </script>
-  <style>body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;max-width:720px;margin:2rem auto;line-height:1.6}</style>
+
+  <style>
+    body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;max-width:720px;margin:2rem auto;line-height:1.6}
+    a{text-decoration:none}
+  </style>
 </head>
 <body>
-  <h1>Vincent Rotich — Google Scholar</h1>
-  <p>This page links to the official <strong>Google Scholar profile</strong> for Vincent Rotich.</p>
+  <h1>Vincent Rotich Google Scholar</h1>
+  <p>This page links to the official <strong>Google Scholar</strong> profile for Vincent Rotich.</p>
   <p><a href="https://scholar.google.com/citations?user=nMBiqwMAAAAJ&hl=en"><strong>Vincent Rotich Google Scholar</strong></a></p>
   <p>Home: <a href="https://nniv-cmyk.github.io/">nniv-cmyk.github.io</a></p>
 </body>
 </html>
-
-
