Update title and name in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vincent Rotich — Google Scholar</title>
+  <title>Google Scholar</title>
   <meta name="description" content="Official links for Vincent Rotich. Google Scholar, publications, and profiles." />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://nniv-cmyk.github.io/" />
@@ -40,7 +40,7 @@
   </style>
 </head>
 <body>
-  <h1>Vincent Rotich</h1>
+  <h1>Vincent K. Rotich</h1>
   <p class="affil">Kyoto University · Biosensing Engineering</p>
 
   <p>👉 <a href="https://scholar.google.com/citations?user=nMBiqwMAAAAJ&hl=en"><strong>Google Scholar</strong></a></p>
