Update name and alternateName in JSON-LD schema

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "@id": "https://nniv-cmyk.github.io/#vincent-rotich",
-    "name": "Vincent Rotich",
-    "alternateName": ["Vincent K. Rotich", "Vincent Kipkirui Rotich", "Rotich Vincent Kipkirui"],
+    "name": "Vincent K. Rotich",
+    "alternateName": ["Vincent Rotich", "Vincent Kipkirui Rotich", "Rotich Vincent Kipkirui"],
     "givenName": "Vincent",
     "familyName": "Rotich",
     "jobTitle": "PhD (Biosensing Engineering)",
